k8s/opencti/connector-analysis-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: connector-analysis
  name: connector-analysis
  namespace: $(NAMESPACE)
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: connector-analysis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: connector-analysis
    spec:
      containers:
        - env:
            - name: OPENCTI_URL
              value: "http://opencti:8080"
            - name: OPENCTI_TOKEN
              valueFrom:
                secretKeyRef:
                  key: opencti-admin-token
                  name: opencti-azure-kv-secret
            - name: CONNECTOR_ID
              value: "analysis-connector-001"
            - name: CONNECTOR_NAME
              value: "ImportDocumentAnalysis"
            - name: CONNECTOR_SCOPE
              value: "application/pdf,text/plain,text/html"
            - name: CONNECTOR_TYPE
              value: "INTERNAL_ANALYSIS"
            - name: CONNECTOR_LOG_LEVEL
              value: "info"
            - name: CONNECTOR_AUTO
              value: "true"
            - name: CONNECTOR_CONFIDENCE_LEVEL
              value: "15"
            - name: CONNECTOR_ONLY_CONTEXTUAL
              value: "false"
            - name: CONNECTOR_VALIDATE_BEFORE_IMPORT
              value: "false"
          image: $(ACRSERVER)/dockerhub/opencti/connector-import-document:6.7.4
          name: connector-analysis
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
            requests:
              memory: 256Mi
              cpu: 250m
          volumeMounts:
            - name: opencti-azure-kv-volume
              mountPath: /mnt/secrets-store
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: opencti-azure-kv-volume
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "opencti-azure-kv"
